Fix: Bug fixed file name too long

--- a/app/assets/css/dropbox-clone.css
+++ b/app/assets/css/dropbox-clone.css
@@ -56,6 +56,13 @@ body {
   text-transform: uppercase;
 }
 
+.cut {
+  white-space: nowrap;
+  width: 160px;
+  overflow: hidden;
+  text-overflow:    ellipsis;
+}
+
 /*
  * Navbar
  */
